work on appendix

--- a/main.tex
+++ b/main.tex
@@ -31,8 +31,8 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[On Improving Pattern Recognition in Deep Learning Systems through Self-Organization]{
-    On Improving Pattern Recognition in Deep Learning Systems through Self-Organization
+\title[Deep-Learning-based Pattern Recognition and the Principle of Self Organization]{
+    Deep-Learning-based Pattern Recognition and the Principle of Self Organization
 }
 \subtitle{Incorporating Findings from Neuroscience about Natural Intelligence into Modern Deep Learning Architectures}
 
