work on appendix

--- a/main.bib
+++ b/main.bib
@@ -781,6 +781,42 @@ url = "https://sebastianrisi.com/self_assembling_ai"
   url     = {http://jmlr.org/papers/v13/gretton12a.html}
 }
 
+ @article{Kohonen_1982, title={Self-organized formation of topologically correct feature maps}, volume={43}, ISSN={0340-1200, 1432-0770}, DOI={10.1007/BF00337288}, number={1}, journal={Biological Cybernetics}, author={Kohonen, Teuvo}, year={1982}, pages={59–69}, language={en} }
+
+ @book{Kohonen_1989, address={Berlin, Heidelberg}, edition={Third edition}, title={Self-Organization and Associative Memory}, ISBN={978-3-642-88163-3}, abstractNote={This monograph gives a tutorial treatment of new approaches to self-organization, adaptation, learning and memory. It is based on recent research results, both mathematical and computer simulations, and lends itself to graduate and postgraduate courses in the natural sciences. The book presents new formalisms of pattern processing: orthogonal projectors, optimal associative mappings, novelty filters, subspace methods, feature-sensitive units, and self-organization of topological maps, with all their computable algorithms. The main objective is to provide an understanding of the properties of information representations from a general point of view and of their use in pattern information processing, as well as an understanding of many functions of the brain. In the third edition two new discussions have been added and a proof has been revised. The author has developed this book from Associative Memory - A System-Theoretical Approach (Volume 17 of Springer Series in Communication and Cybernetics, 1977), the first ever monograph on distributed associative memories}, publisher={Springer Berlin Heidelberg}, author={Kohonen, Teuvo}, year={1989}, language={eng} }
+
+ @article{Marsland_Shapiro_Nehmzow_2002, title={A self-organising network that grows when required}, volume={15}, ISSN={08936080}, DOI={10.1016/S0893-6080(02)00078-3}, number={8–9}, journal={Neural Networks}, author={Marsland, Stephen and Shapiro, Jonathan and Nehmzow, Ulrich}, year={2002}, month={Oct}, pages={1041–1058}, language={en} }
+
+@inproceedings{NIPS1994_d56b9fc4,
+ author = {Fritzke, Bernd},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {G. Tesauro and D. Touretzky and T. Leen},
+ pages = {},
+ publisher = {MIT Press},
+ title = {A Growing Neural Gas Network Learns Topologies},
+ url = {https://proceedings.neurips.cc/paper/1994/file/d56b9fc4b0f1be8871f5e1c40c0067e7-Paper.pdf},
+ volume = {7},
+ year = {1994}
+}
+
+ @article{Reilly_Cooper_Elbaum_1982, title={A neural model for category learning}, volume={45}, ISSN={0340-1200, 1432-0770}, DOI={10.1007/BF00387211}, number={1}, journal={Biological Cybernetics}, author={Reilly, Douglas L. and Cooper, Leon N. and Elbaum, Charles}, year={1982}, month={Aug}, pages={35–41}, language={en} }
+
+ @article{Fritzke_1994, title={Growing cell structures—A self-organizing network for unsupervised and supervised learning}, volume={7}, ISSN={08936080}, DOI={10.1016/0893-6080(94)90091-4}, number={9}, journal={Neural Networks}, author={Fritzke, Bernd}, year={1994}, month={Jan}, pages={1441–1460}, language={en} }
+
+ @article{Mici_Parisi_Wermter_2018, title={A self-organizing neural network architecture for learning human-object interactions}, volume={307}, ISSN={09252312}, DOI={10.1016/j.neucom.2018.04.015}, journal={Neurocomputing}, author={Mici, Luiza and Parisi, German I. and Wermter, Stefan}, year={2018}, month={Sep}, pages={14–24}, language={en} }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
